trying to fix banner visibility

--- a/public/css/landing-page.css
+++ b/public/css/landing-page.css
@@ -99,7 +99,7 @@ body, h1, h2, h3, h4, h5, h6 {
 .banner {
 	padding: 100px 0;
 	color: #f8f8f8;
-	background: url(../img/hugs.jpg) no-repeat center center;
+	background: url(../img/hugbud.jpg) no-repeat center center;
 	background-size: cover;
 	
 }
